--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.2",
         "moment": "^2.30.1",
+        "morgan": "^1.10.0",
         "mysql2": "^3.14.1",
         "sequelize": "^6.37.7",
         "swagger-jsdoc": "^6.2.8",
